--- a/question_7.html
+++ b/question_7.html
@@ -14311,7 +14311,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Please note that for the derivation for the equations to convert indices to coordinates and coordinates to indice in the n-dimensional case, please refer to the answer sheet.</p>
+<p>Please note that for the derivation for the equations to convert indices to coordinates and coordinates to indices in the n-dimensional case, please refer to the answer sheet.</p>
 
 </div>
 </div>
